--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,12 +1,12 @@
 $body-light-bg: #f7f7fc;
 $main-light-bg: #ffffff;
-$main-dark-bg: #05192d;
+$main-dark-bg: #000000;
 
 $light-bg-hover: rgb(235, 235, 235);
-$dark-bg-hover: #174166;
+$dark-bg-hover: #4b4b4b;
 $overlay-shadow-bg: rgba(0, 0, 0, 0.2);
 
-$font-dark-color: #05192d;
+$font-dark-color: #000000;
 $font-light-color: #ffffff;
 $alt-font-color: #8d8ea9;
 
